Prevent icons from dissapearing or shrinking too much

--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ body {
 .sidebar svg {
     height: 2em;
     fill: currentColor;
+    min-width: 2em;
 }
 
 .header {
